# list-reserve

./: .clang-format  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  HISTORY.md  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  setpu.py  setup.cfg  setup.py  test.py
.devcontainer/: devcontainer.json
.github/: actionlint.yaml  zizmor.yml
.github/workflows/: actions-lint.yml  codeql.yml  lint.yml  pypi-auth-check.yml  release.yml  test.yml  test_wheel.yml  typecheck.yml  wheels.yml
list_reserve/: __init__.py  __init__.pyi
src/: list_reserve.c
tests/: __init__.py  _support.py  test_allocated_bytes.py  test_capacity.py  test_remaining_capacity.py  test_reserve.py  test_shrink_to_fit.py  test_stats.py
tools/: run_installed_tests.py
