# Build configuration for the list_reserve CPython C extension.
# Project metadata lives here (PEP 621 [project]); setup.py carries only the
# Extension() definition. This file also declares the PEP 517 [build-system]
# and the cibuildwheel config (single source of truth, read identically by
# cibuildwheel locally and in CI).

[build-system]
# setuptools>=77 for PEP 639 SPDX license expression support; this also clears
# cibuildwheel's >=65.4.1 floor for Windows ARM64 wheel tagging.
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "list_reserve"
version = "0.4.0"
description = "Python builtin list memory allocation library"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "ChanTsune", email = "yshegou@gmail.com" }]
keywords = ["list", "extension", "memory", "reserve", "capacity"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/ChanTsune/list-reserve"

# Explicit package list: with [project] present, setuptools enables automatic
# discovery, which would trip over the src/ directory. Declare the stub package
# directly.
[tool.setuptools]
packages = ["list_reserve"]

[tool.setuptools.package-data]
list_reserve = ["py.typed", "__init__.pyi"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
# E/F: pycodestyle + pyflakes, I: import sorting, B: bugbear,
# UP: pyupgrade (py310 baseline), RUF: Ruff-specific. Not "ALL" by design.
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.cibuildwheel]
# CPython only, 3.10 through 3.14. PyPy (pp*), GraalPy (gp*), free-threaded
# (cp3??t-*) and any future minor are excluded by not matching this list.
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"

# Defense in depth:
# - pp*: never build PyPy (this extension casts PyObject* to PyListObject*
#   and reads internal ob_item/allocated fields; CPython-only).
# - *t-*: never build free-threaded wheels. For CPython 3.14+ the free-threaded
#   variant (cp314t) is built by default with no enable flag, so this skip is
#   load-bearing; the nogil/per-object-lock build is untested against these
#   internals.
skip = "pp* *t-*"

# Run the repo-root unittest suite against each freshly installed wheel.
# cibuildwheel runs this from a temp dir with the wheel installed, so
# `import list_reserve` binds to the installed .so. {project} only tells
# unittest where to FIND test.py; cwd stays in the temp dir, so the
# list_reserve/ stub directory at the repo root never shadows the installed
# extension module. Do not rewrite as `cd {project} && ...` — that would put
# the stub dir at the front of import resolution and shadow the .so.
test-command = "python -m unittest discover -s {project} -p test.py"

# Windows ARM64 is experimental and its tests cannot run on the build host, so
# skip them (the wheel is still built and shipped).
test-skip = "*-win_arm64"

# Pin the manylinux/musllinux images for reproducibility; both families are
# built per Linux arch automatically.
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
musllinux-x86_64-image = "musllinux_1_2"
musllinux-aarch64-image = "musllinux_1_2"

# riscv64 has no manylinux_2_28 image (the baseline used above for x86_64 and
# aarch64); manylinux_2_39 is the only manylinux image cibuildwheel provides
# for riscv64. These two values match cibuildwheel's current riscv64 defaults;
# pinning them documents the intent and guards against future default drift.
manylinux-riscv64-image = "manylinux_2_39"
musllinux-riscv64-image = "musllinux_1_2"
