[metadata]
name = list_reserve
version = 0.3.1
author = ChanTsune
author_email = yshegou@gmail.com
license = MIT
description = Memory allocation library for Python builtin list
keywords =
    list
    extension
    memory
    reserve
    capacity
url = https://github.com/ChanTsune/list-reserve
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

[options]
packages = list_reserve

[options.package_data]
list_reserve = py.typed; __init__.pyi
